@@ -1,5 +1,7 @@
 package com.hea3ven.buildingbricks.core.materials.rendering;
 
+import javax.vecmath.Vector3f;
+
 import net.minecraft.block.BlockSlab;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.client.resources.model.ModelRotation;
@@ -7,6 +9,7 @@ import net.minecraft.client.resources.model.ModelRotation;
 import net.minecraftforge.client.model.IModel;
 import net.minecraftforge.client.model.IModelState;
 import net.minecraftforge.client.model.ModelLoader;
+import net.minecraftforge.client.model.TRSRTransformation;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 
@@ -51,23 +54,23 @@ public class RenderDefinitionSlab extends RenderDefinitionSimple {
 	public IModelState getModelState(IModelState modelState, IBlockState state) {
 		if (vertical) {
 			switch (BlockProperties.getSide(state)) {
-			default:
-			case NORTH:
-				modelState = ModelRotation.X0_Y0;
-				break;
-			case EAST:
-				modelState = ModelRotation.X0_Y90;
-				break;
-			case SOUTH:
-				modelState = ModelRotation.X0_Y180;
-				break;
-			case WEST:
-				modelState = ModelRotation.X0_Y270;
-				break;
+				default:
+				case NORTH:
+					modelState = ModelRotation.X0_Y0;
+					break;
+				case EAST:
+					modelState = ModelRotation.X0_Y90;
+					break;
+				case SOUTH:
+					modelState = ModelRotation.X0_Y180;
+					break;
+				case WEST:
+					modelState = ModelRotation.X0_Y270;
+					break;
 			}
 		} else {
-			modelState = BlockBuildingBricksSlab.getHalf(state) == BlockSlab.EnumBlockHalf.BOTTOM
-					? ModelRotation.X0_Y0 : ModelRotation.X180_Y0;
+			modelState = BlockBuildingBricksSlab.getHalf(state) == BlockSlab.EnumBlockHalf.BOTTOM ?
+					ModelRotation.X0_Y0 : new TRSRTransformation(new Vector3f(0, 0.5f, 0), null, null, null);
 		}
 		return super.getModelState(modelState, state);
 	}
