@@ -1,0 +1,14 @@
+{
+    "name": "Podzol",
+    "id": "buildingbrickscompatvanilla:dirt_podzol",
+    "type": "dirt",
+    "hardness": 0.5,
+    "textures": {
+        "top": "minecraft:blocks/dirt_podzol_top",
+        "side": "minecraft:blocks/dirt_podzol_side",
+        "bottom": "minecraft:blocks/dirt"
+    },
+    "blocks": {
+        "full": { "id": "minecraft:dirt", "meta": 2 }
+    }
+}
