@@ -1,4 +1,5 @@
     * Add a portable ladder block.
+    * Add materials for coarse dirt, podzol and mycelium, fixes #25.
     * Add compatibility for thaumcraft blocks.
     * Add fence and fence gate block types.
     * Add a GUI for the trowel when you shift-right click on the air, fixes #23.
